<resources>
    <string name="app_name">f23_3175_g12_serenitysoundsapplication</string>
    <string name="map_api">AIzaSyCJ6S0Mqdo-50wy3aEag5pFVWv--hL7Yrc</string>
    <string name="txtLogin">Login</string>
    <string name="txtEmail">Email</string>
    <string name="txtPassword">Password</string>
    <string name="txtBtnLogin">Login</string>
    <string name="txtSerenitySounds">Serenity Sounds</string>
    <string name="txtCreateAccount">Create Account</string>
    <string name="txtBtnCreateAccount">Create Account</string>
    <string name="txtCreatePasswordAgain">Password Again</string>
    <string name="txtMediaPlayer">Media Player</string>
    <string name="txtBtnDonation">Donation</string>
    <string name="txtTitleSchedule">Schedule</string>
    <string name="txtDays">days</string>
    <string name="txtMainLogin">Go Login</string>
    <string name="txtMainCreateAccount" />
    <string name="btnMainCreateAccount">Go Create Account</string>
    <string name="txtMainMediaPlayer">Go Media Player</string>
    <string name="txtMainSchedule">Go Schedule</string>
    <string name="txtBackFromSchedule">Back to Main</string>
    <string name="txtBackFromMediaPlayer">Back to Main</string>
    <string name="hello_blank_fragment" />
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="txtBackToMain">Back to Main</string>
    <string name="UserName">User Name</string>
    <string name="txtShowImage">Show Image</string>
    <string name="textViewPlayTitle">PlayList For You!</string>

</resources>